# ado_stats

./: .env-sample  .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
configurations/: api.py  azdo_settings.py
models/: bug.py  feature.py  git_branch.py  git_commit.py  milestone.py  pipeline.py  pull_request.py  task.py  user_story.py  work_item.py
services/: bugs.py  features.py  git_branches.py  git_commits.py  git_repositories.py  milestones.py  pipelines.py  pull_requests.py  tasks.py  user_stories.py  workitems.py
statistics/: base.py  bug.py  burndown.py  feature.py  git_branches.py  main.py  milestone.py  pipeline.py  pull_request.py  sidebar.py  task.py  user_story.py
utils/: aggr_utils.py  data_cache.py  data_utils.py  date_utils.py  display.py  name_formatter.py
validations/: orphaned_tasks.py  resolvable_features.py  unresolved_tasks.py
