[tool.poetry]
name = "ado-stats"
version = "0.1.0"
description = ""
authors = ["Dennis Seah <dennis.seah@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
streamlit = "^1.29.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pyright = "^1.1.344"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
